--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ chrono = "0.4.22"
 fern = { version = "0.6", features = ["colored"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+once_cell = "1.15.0"
