--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ fern = { version = "0.6", features = ["colored"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 once_cell = "1.15.0"
+threadpool = "1.8.1"
